--- a/src/app/layout/banners/banner.component.scss
+++ b/src/app/layout/banners/banner.component.scss
@@ -8,20 +8,27 @@ mat-toolbar {
   padding: var(--banner-padding);
   font-weight: 600;
   font-size: 16px;
+  gap: 8px;
+
+  .banner-message {
+    font-size: 14px;
+  }
+
+  .banner-subtitle {
+    font-size: 0.8rem;
+    opacity: 0.8;
+  }
 
   &.development-banner {
     background: linear-gradient(135deg, var(--warn-color), var(--orange));
-    gap: 8px;
+  }
 
-    .banner-message {
-      font-size: 14px;
-    }
+  &.flatpak-warning-banner {
+    background-color: var(--banner-background);
 
-    .banner-subtitle {
-      font-size: 11px;
-      opacity: 0.9;
-      margin-left: 8px;
-      font-weight: 400;
+    mat-icon {
+      height: 20px;
+      width: 20px;
     }
   }
 
